# dentist-workflow-engine

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  setup.cfg
examples/: test_examples.py
examples/basic/: workflow.py
examples/basic/inputs/: bar.in
examples/delete-outputs/: workflow.py
examples/detached-execution/: workflow.py
examples/file-lists/: workflow.py
examples/group-jobs/: workflow.py
examples/inheritance/: workflow.py
examples/parallel-test/: resources.json  workflow.py
examples/python-code/: workflow.py
examples/python-code/inputs/: foo.in
examples/slurm/: resources.yaml  workflow.py
examples/targets-test/: workflow.py
src/dentist/workflow/: __init__.py
src/dentist/workflow/engine/: __init__.py  actions.py  cli.py  container.py  executors.py  resources.py  util.py  workdir.py  workflow.py
src/dentist/workflow/engine/interfaces/: __init__.py  slurm.py
tests/dentist/workflow/engine/: test_container.py  test_util.py
