[metadata]
name = dentist-workflow-engine
version = attr: dentist.workflow.VERSION
description = Workflow engine for DENTIST.
# long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
# keywords = one, two
license = MIT
classifiers =
    Programming Language :: Python :: 3

# [options]
# zip_safe = False
# include_package_data = True
# packages = find:
# install_requires =
#     requests
#     importlib-metadata; python_version<"3.8"

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

# [options.entry_points]
# console_scripts =
#     executable-name = my_package.module:function

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

# [options.packages.find]
# exclude =
#     examples*
#     tools*
#     docs*
#     my_package.tests*
