[metadata]
name = dentist-workflow-engine
version = attr: dentist.workflow.VERSION
description = Workflow engine for DENTIST.
# long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
# keywords = one, two
license = MIT
classifiers =
    Programming Language :: Python :: 3

# [options]
# zip_safe = False
# include_package_data = True
# packages = find:
# install_requires =
#     requests
#     importlib-metadata; python_version<"3.8"

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
ignore = W503
per-file-ignores =
    # F401 imported but unused (imports are just forwarded)
    # F403 unable to detect undefined names (init files should not require this check)
    __init__.py: F401,F403

    # F405 may be undefined (there is some magic happening that's breaking things; just ignore it)
    # F821 undefined name (injecting globals into functions break this check)
    workflow.py: F405,F821

max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
